<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".MainActivity">

    <!-- Top Toolbar -->
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/toolbar_bg"
        android:elevation="4dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:title="@string/app_name"
        app:titleTextColor="@android:color/white" />

    <!-- Drawing Canvas -->
    <com.example.infinitezoomdrawing.DrawingView
        android:id="@+id/drawingView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@android:color/white"
        app:layout_constraintBottom_toTopOf="@id/bottomPanel"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar" />

    <!-- Bottom Control Panel -->
    <LinearLayout
        android:id="@+id/bottomPanel"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/panel_bg"
        android:elevation="4dp"
        android:orientation="vertical"
        android:padding="8dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <!-- File Actions Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnNew"
                style="@style/Widget.InfiniteZoomDrawing.BottomIconButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/new_drawing"
                android:tint="@color/button_text"
                app:srcCompat="@drawable/ic_action_new" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnOpen"
                style="@style/Widget.InfiniteZoomDrawing.BottomIconButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/open_drawing"
                android:tint="@color/button_text"
                app:srcCompat="@drawable/ic_action_open" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnSave"
                style="@style/Widget.InfiniteZoomDrawing.BottomIconButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/save_drawing"
                android:tint="@color/toolbar_bg"
                app:srcCompat="@drawable/ic_action_save" />

        </LinearLayout>

        <!-- Brush Type Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnBrushPen"
                style="@style/Widget.InfiniteZoomDrawing.BottomIconButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/brush_pen"
                android:tint="@color/button_text"
                app:srcCompat="@drawable/ic_tool_pen" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnBrushMarker"
                style="@style/Widget.InfiniteZoomDrawing.BottomIconButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/brush_marker"
                android:tint="@color/button_text"
                app:srcCompat="@drawable/ic_tool_marker" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnBrushSoft"
                style="@style/Widget.InfiniteZoomDrawing.BottomIconButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/brush_soft"
                android:tint="@color/button_text"
                app:srcCompat="@drawable/ic_tool_brush" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnBrushEraser"
                style="@style/Widget.InfiniteZoomDrawing.BottomIconButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/brush_eraser"
                android:tint="@color/button_text"
                app:srcCompat="@drawable/ic_tool_eraser" />

        </LinearLayout>

        <!-- Color Palette Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <!-- Selected color indicator -->
            <View
                android:id="@+id/viewSelectedColor"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_margin="6dp"
                android:background="@drawable/color_swatch_border" />

            <!-- Color swatches -->
            <View android:id="@+id/colorSwatch0"
                style="@style/ColorSwatch" />
            <View android:id="@+id/colorSwatch1"
                style="@style/ColorSwatch" />
            <View android:id="@+id/colorSwatch2"
                style="@style/ColorSwatch" />
            <View android:id="@+id/colorSwatch3"
                style="@style/ColorSwatch" />
            <View android:id="@+id/colorSwatch4"
                style="@style/ColorSwatch" />
            <View android:id="@+id/colorSwatch5"
                style="@style/ColorSwatch" />
            <View android:id="@+id/colorSwatch6"
                style="@style/ColorSwatch" />
            <View android:id="@+id/colorSwatch7"
                style="@style/ColorSwatch" />
            <View android:id="@+id/colorSwatch8"
                style="@style/ColorSwatch" />
            <View android:id="@+id/colorSwatch9"
                style="@style/ColorSwatch" />
            <View android:id="@+id/colorSwatch10"
                style="@style/ColorSwatch" />
            <View android:id="@+id/colorSwatch11"
                style="@style/ColorSwatch" />

        </LinearLayout>

        <!-- Brush Size Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            android:paddingBottom="4dp">

            <TextView
                android:id="@+id/tvBrushSizeLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:minWidth="60dp"
                android:textColor="@color/text_primary"
                android:textSize="12sp"
                tools:text="Size: 12" />

            <SeekBar
                android:id="@+id/seekBarBrushSize"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:max="79"
                android:progress="11" />

        </LinearLayout>

        <!-- Edit Actions Row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnUndo"
                style="@style/Widget.InfiniteZoomDrawing.BottomIconButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/undo"
                android:tint="@color/button_text"
                app:srcCompat="@drawable/ic_action_undo" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnRedo"
                style="@style/Widget.InfiniteZoomDrawing.BottomIconButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/redo"
                android:tint="@color/button_text"
                app:srcCompat="@drawable/ic_action_redo" />

            <androidx.appcompat.widget.AppCompatImageButton
                android:id="@+id/btnClear"
                style="@style/Widget.InfiniteZoomDrawing.BottomIconButton"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:contentDescription="@string/clear_canvas"
                android:tint="@color/color_error"
                app:srcCompat="@drawable/ic_action_clear" />

        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
